--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <!-- <app-puntos></app-puntos> -->
-<app-resistencias></app-resistencias>
+<!-- <app-resistencias></app-resistencias> -->
+<app-menu></app-menu>
+<div class="container">
+  <app-pizzas></app-pizzas>
+</div>
