--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
 <!-- <app-resistencias></app-resistencias> -->
 <app-menu></app-menu>
 <div class="container">
-  <app-pizzas></app-pizzas>
+  <router-outlet></router-outlet>
 </div>
