--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -19,10 +19,16 @@
         </a>
       </li>
       <li class="nav-item">
-        <a href="" class="nav-link" routerLink="IricComponent">IRIC</a>
+        <a href="" class="nav-link" routerLink="PuntosComponent">Distancia Entre dos puntos</a>
       </li>
       <li class="nav-item">
-        <a href="" class="nav-link" routerLink="OperasBasComponent">Operaciones basicas</a>
+        <a href="" class="nav-link" routerLink="ResistenciasComponent">Resistencias</a>
+      </li>
+      <li class="nav-item">
+        <a href="" class="nav-link" routerLink="PizzasComponent">Pizzas</a>
+      </li>
+      <li class="nav-item">
+        <a href="" class="nav-link" routerLink="CinepolisComponent">Cinepolis</a>
       </li>
     </ul>
   </div>
